# llmgrapher

./: .gitignore  Makefile  README.md  TODO.md  deb_dependencies.sh  environment.yml  extract_graph.ipynb  ner.ipynb  pyproject.toml
data/: .gitignore
data/input/ag_news/: ag_news.txt
data/output/ag_news/: chunks.csv  graph.csv
docs/: automation_backlog.md
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: index.md
docs/todo/: TODO.md  automation_backlog.md
helpers/: df_helpers.py  prompts.py
llmgrapher/: __init__.py  __main__.py  cli.py  config.py  extract_graph.py  llmgrapher.py  logger.py  utils.py
llmgrapher/helpers/: prompts.py
notebooks/: 0.0-pg-wikigraphs-environment-setup.ipynb  0.01-pg-extract-graph.ipynb  1.0-pg-wikigraphs-explore-datasets.ipynb  2.0-pg-ollama-explore.ipynb  X.0-pg-extract-graph.ipynb  extract_graph.ipynb
references/logo/: COPYRIGHT
reports/graphs/: graph.html
ui/: graph.html
wikigraphs/: README.md  main.py  utils.py
wikigraphs/scripts/: compute_blue_score.py  download.sh  visualize_graph.py
wikigraphs/wikigraphs/data/: paired_dataset.py  paired_dataset_test.py  tokenizers_test.py  wikitext.py  wikitext_test.py
